[package]
name = "arch_words"
version = "1.0.0"
edition = "2021"
authors = ["Maximilian 'NervousNullPtr' Schleicher <nervousnullptr@librapid.org>"]
keywords = ["types", "basic"]
categories = ["development-tools", "hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
